clusters/crc-cryostat/overlays/ossm3-member-namespaces/networkpolicy-allow-istio-system-istio-ingress3.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-system
  namespace: istio-ingress3
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
  policyTypes:
    - Ingress
